hphp/test/zend/bad/tests/classes/factory_and_singleton_005.php
<?php
class test {

  protected function __destruct() {
  }
}

$obj = new test;
$obj = NULL;

echo "Done\n";
?>